added semantics and content

--- a/index.html
+++ b/index.html
@@ -7,6 +7,46 @@
     <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body>
-    
+
+
+    <header>   
+     <!--Main header showing the main detailed heading-->
+        <h1>My Web App </h1>
+        <p>This is my exercise on web app challenge.</p>
+    </header>
+
+    <section>
+<!--showing a section in the document -->
+            <h2>Web App</h2>
+            <p>
+                A web application is an application program that is stored on a remote server and delivered over the internet through a browser interface.
+            </p>
+    </section>
+<br>
+        <summary>
+            <!--A summary of a web app-->
+            <p>
+                A web application (or web app) is application software that is accessed using a web browser. Web applications are delivered on the World Wide Web to users with an active network connection.
+            </p>
+        </summary>
+<br>
+<!--Another section showing information-->
+    <section>
+        <h4>Strategies to Remember</h4>
+            1. Plan Strategy. <br>
+            2. Consider Targeted Audience. <br>
+            3. Pick a Good Domain Name and Host. <br>
+            4. Choose an Attractive Layout with a User-friendly Interface. <br>
+            5. Concern about Website Speed and Security. <br>
+            6. Do Site Customization and Promotion. <br>
+            7. Always Prefer Cross-Platform Compatibility Device, Browser, Software. <br>
+        </p>
+    </section>
+<br>
+    <footer>
+        <!--Displaying footer -->
+       <p>Copyright&copy 2023</p> 
+    </footer>
+
 </body>
 </html>
